src/objects/TestLoadStep__mdt.object
<CustomObject>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TestData__c</fullName>
        <label>TestData</label>
        <referenceTo>TestData__mdt</referenceTo>
        <relationshipLabel>Tests Load</relationshipLabel>
        <relationshipName>Tests_Load</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>TestSetup__c</fullName>
        <label>TestSetup</label>
        <referenceTo>TestSetup__mdt</referenceTo>
        <relationshipLabel>Tests Load</relationshipLabel>
        <relationshipName>Tests_Load</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Test Load Step</label>
    <pluralLabel>Tests Load</pluralLabel>
</CustomObject>